/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.calcolatrice;

import java.util.*
import java.io.*

/**
 *
 * @author antonio
 */

public class Console{
	
}
