/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.calcolatrice;

import java.util.*;
import java.io.*;

/**
 *
 * @author antonio
 */

public class Operazioni {
	public static double addizione(double a, double b) {

		return a + b;
	}

	public static double sottrazione(double a, double b) {

		return a - b;
	}

	public static double moltiplicazione(double a, double b) {

		return a * b;
	}

	public static double divisione(double a, double b) {

		return a / b;
	}

}
