classDiagram
	class Calcolatrice
		<<Boundary>>

		+ leggiOperazione(br : BufferedReader) void
		+ stampaRisultato() void
		+ mostraRisultatiPrec() void

	class Console
		<<Control>>

		+ effettuaOperazione(s : String) void
		+ salvaRisultato(o : StringBuilder) void
		+ eliminaRisultato(d : double) void

	class Memoria
		<<Entity>>
		- listaRisultati : List~Double~

		+ appendiRisultato(r : Double) void
		+ estraiRisultato() Double
		+ cancellaRisultato(val : Double) void

	class Risultato
		<<Entity>>
		- operazione : String
		- valore : double

		+ setOperazione(nuovaOperazione : String) void
		+ getOperazione() String
		+ setValore(nuovoValore : double) void
		+ getValore() double

	class Operazioni
		<<Entity>>

		<<metodi statici>>
		+ addizione(add1 : double,add2 : double) double
		+ sottrazione(dim : double,sott : double) double
		+ moltiplicazione(fatt1 : double,fatt2 : double) double
		+ divisione(div1 : double,div2 : double) double



	Calcolatrice <-- Console: comunica con
	Console <-- Operazioni: effettua le
	Console -- "1..*" Risultato: manipola
	Console -- "1" Memoria: salva i risutati in

	Memoria *-- "1..*" Risultato: contiene i risultati

	Operazioni -- "1.." Risultato: elabora i
